fix: :wheelchair: improve contrast on the "video evidence" button

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     padding: 8px 24px;
     border-radius: 5px;
 
-    background-color: #3882F6;
+    background-color: #2655a0;
     color: #E5E7EB;
     text-decoration: none;
     font-weight: bold;
